Adicion al index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>index curso frond</title>
 </head>
 <body>
-    
+    <section>
+        <h1>Platzi</h1>
+        <p>Tiene una comunidad</p>
+        <ul>
+            <li>Maravillosa</li>
+            <li>Increible</li>
+        </ul>
+    </section>
 </body>
 </html>
