--- a/cajas.html
+++ b/cajas.html
@@ -7,20 +7,21 @@
     <title>Document</title>
     <style>
         div {
-            background: pink;
+            width: 200px;
+            height: 200px;
+            background: palevioletred;
+            padding: 20px;
+            box-sizing: border-box;
+            border: 1px solid cyan;
+
         }
-        .titulo {
-            color: blueviolet;
-        }
-        #titulo2 {
-            color: aqua;
-        }
+
     </style>
 </head>
 <body>
+    <div>
+        hola perras
+    </div>
     
-    
-    <div id="titulo">Hola mundo</div>
-    <div class="titulo2">Hola perras</div>
 </body>
 </html>
